--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -77,6 +77,14 @@ body {
 
 }
 
+
+.text-small {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  line-height: 1.6;
+}
+
 li {
  padding-left: 1rem;
  margin-left: 1.5rem;
