--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,10 @@ ul {
   .links:hover {
     transform: scale(1.3); }
 
+h3 a {
+  text-decoration: none;
+  color: rgba(135, 206, 235, 0.8); }
+
 .post {
   margin-bottom: 10rem;
   padding-bottom: 2rem;
@@ -431,6 +435,22 @@ tfoot {
   background-color: #333;
   color: #fff; }
 
+.results-table table {
+  border-collapse: separate;
+  border-spacing: 0;
+  border-right: 1px solid #333 !important;
+  font-size: 1.6rem; }
+
+.results-table td, .results-table th {
+  border: 1px solid #333 !important;
+  border-left: 1px solid #333 !important;
+  border-right: 1px solid #fff !important;
+  padding: .8rem; }
+
+.results-table #first {
+  background-color: orange;
+  color: #fff; }
+
 form {
   font-family: "Lato" sans-serif;
   font-size: 1.6rem;
@@ -449,6 +469,9 @@ form {
     margin: 0; }
   form li + li {
     margin-top: 2rem; }
+
+#terms {
+  width: 5%; }
 
 label {
   /* Uniform size & alignment */
@@ -479,11 +502,6 @@ select {
 
 select {
   background-color: white; }
-
-.button {
-  /* Align buttons with the text fields */
-  padding-left: 20rem;
-  /* same size as the label elements */ }
 
 .header {
   display: flex;
