--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -1,20 +1,44 @@
+    table {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+    }
+    td {
+        border: 1px solid #333;
+      	text-align: center;
+        padding: .2rem;
+    
+      	
+    }
+    
+    thead,
+    tfoot {
+    
+        background-color: #333;
+        color: #fff;
+    }
 
-table {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-td {
-    border: 1px solid #333;
-  	text-align: center;
-  padding: .2rem;
 
-  	
-}
+.results-table {
 
-thead,
-tfoot {
+  table{
+    border-collapse: separate;
+    border-spacing: 0;
+    border-right: 1px solid #333 !important;
+    font-size: 1.6rem;
+  }
 
-    background-color: #333;
+  td, th{
+    border: 1px solid #333 !important;
+    border-left: 1px solid #333 !important;
+    border-right: 1px solid #fff !important;
+    padding: .8rem;
+  }
+
+  
+  #first {
+    background-color: orange;
     color: #fff;
+  }
+
 }
 
