--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,7 +14,11 @@
     font-size: $default-font-size;
     margin-bottom: 1rem;
     position: relative;
-
+    
+    ion-icon {
+      font-size: 1rem;
+      color: white;
+    }
 
    // &:not(:last-child) {
    //   padding-right: $gutter-medium;
