--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url(../../img/karya3.jpg);
+  background-image: url(../img/karya3.jpg);
   background-size: cover;
   //background-position-y: -10rem;
   background-position: center;
