--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,8 @@
   //background-position-y: -10rem;
   background-position: center;
   height: 92vh;
-
+  display: flex;
+  justify-content: center;
 
 
   
