--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   padding: 3rem; }
 
 .body-container {
-  margin: 3rem 50rem 0 50rem; }
+  margin: 3rem 30vw 0 30vw; }
 
 .grid-container {
   padding: 2rem;
@@ -210,18 +210,14 @@ h3 a {
     .menu__sub:not(:last-child) {
       border-bottom: 1px solid rgba(221, 190, 169, 0.4); }
 
-.card-box {
-  display: flex;
-  text-align: center;
-  padding-left: 34vw;
-  padding-top: 8vw; }
-
 .card {
-  perspective: 150rem;
+  perspective: 100vw;
   -moz-perspective: 150rem;
   position: relative;
   height: 27rem;
-  width: 14%; }
+  width: 10%;
+  margin-left: 10rem;
+  margin-top: 10rem; }
   .card__side {
     height: 27rem;
     transition: all .8s ease;
@@ -231,9 +227,13 @@ h3 a {
     left: 0;
     backface-visibility: hidden;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
     .card__side--front {
-      background-color: transparent; }
+      background-color: transparent;
+      color: white; }
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back-1 {
@@ -269,7 +269,8 @@ h3 a {
       background-image: linear-gradient(to top, rgba(207, 217, 223, 0.6) 0%, rgba(226, 235, 240, 0.8) 100%); }
   .card__details {
     background-color: rgba(0, 0, 0, 0.1);
-    padding: 2rem; }
+    padding-right: 2rem;
+    padding-left: 2rem; }
     .card__details ul {
       list-style: none;
       width: 80%;
@@ -292,7 +293,8 @@ h3 a {
     text-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.2); }
   .card__price-value {
     font-size: 4rem;
-    font-weight: 400; }
+    font-weight: 400;
+    margin-bottom: 2rem; }
   .card__karya {
     grid-column: 2 / 3;
     grid-row: 2 / 3; }
@@ -534,7 +536,9 @@ select {
   background-image: url(../img/karya3.jpg);
   background-size: cover;
   background-position: center;
-  height: 92vh; }
+  height: 92vh;
+  display: flex;
+  justify-content: center; }
 
 .wrapper {
   position: relative;
