--- a/sass/components/_races.scss
+++ b/sass/components/_races.scss
@@ -1,25 +1,38 @@
-.card-grid {
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
-  // grid-template-rows: 1fr 1fr 1fr 1fr;
-}
+//.card-grid {
+//   display: grid;
+//   grid-template-columns: repeat(8, 1fr);
+//   align-items: center;
+//   justify-items: center;
+//
+//   &__l {
+//     grid-column: 4 / 5;
+//
+//   }
+//
+//   &__r {
+//     grid-column: 5 / 6;
+//   }
+//}
 
-.card-box {
-  display: flex;
-  text-align: center;
-  padding-left: 34vw;
-  padding-top: 8vw;
-  
-}
+//.card-box {
+//  display: flex;
+//  text-align: center;
+//  padding-left: 34vw;
+//  padding-top: 8vw;
+//  
+//}
 
 
 
 .card{
-  perspective: 150rem;
+  perspective: 100vw;
   -moz-perspective: 150rem;
   position: relative;
   height: 27rem;
-  width: 14%;
+  width: 10%;
+  margin-left: 10rem;
+  margin-top: 10rem;
+    
   
   &__side {
     
@@ -32,8 +45,12 @@
     backface-visibility: hidden;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     &--front{
       background-color: transparent; 
+      color: white;
     }
 
     &--back {
@@ -90,7 +107,8 @@
   &__details {
 
    background-color: rgba(black, 0.1);
-   padding: 2rem;
+   padding-right: 2rem;
+   padding-left: 2rem;
     ul {
       list-style: none;
       width: 80%;
@@ -125,6 +143,7 @@
   &__price-value {
     font-size: 4rem;
     font-weight: 400;
+    margin-bottom: 2rem;
   }
 
 
