--- a/sass/components/_races.scss
+++ b/sass/components/_races.scss
@@ -30,7 +30,7 @@
   position: relative;
   height: 27rem;
   width: 10%;
-  margin-left: 10rem;
+//  margin-left: 10rem;
   margin-top: 10rem;
     
   
