--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,6 +11,13 @@ html {
   font-size: 52.5%;  //so in this case 0.625 x 16 (default browser font) = 10px
   //ORDER OF MEDIA QUERIES MATTERS! LAST ONE IS THE ONE APPLIED IF THERE IS A CONFLICT.
 
+  @include respond(tab-land) {
+    font-size: 50%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 45%;
+  }
  // @include respond(tab-land) { //width < 1200px
  //   font-size: 56.25%;  // 1rem = 9px, so 9/16 = 56.25%
  // }
@@ -49,7 +56,23 @@ body {
 
 .body-container {
 
+  display: flex;
+  flex-direction: column;
   margin: 3rem 30vw 0 30vw ;
+
+  @media(max-width:1024px){
+    margin: 3rem 20vw 0 20vw;
+  }
+
+  @media(max-width:768px){
+    margin: 3rem 15vw 0 15vw;
+  }
+
+  @media(max-width:425px){
+    margin: 3rem 6vw 0 6vw;
+  }
+
+
   
 }
 
