--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -20,7 +20,10 @@
  big desktop;
  */
 @mixin respond($breakpoint) {
-  @if $breakpoint == phone-small {
+  @if $breakpoint == phone-small{
+    @media (max-width: 320px) {@content};
+  }
+  @if $breakpoint == phone-med{
     @media (max-width: 425px) {@content};
   }
   @if $breakpoint == phone {
