--- a/sass/components/_posts.scss
+++ b/sass/components/_posts.scss
@@ -28,6 +28,7 @@
    display: flex;
    flex-direction: column;
    gap: 3rem;
+   
 }
 
 
@@ -35,16 +36,28 @@
    display: flex;
    flex-direction: column;
    gap: 5rem;
+
    &__vis {
       display: flex;
       min-width: 0;
       min-height:0;
 
+   @include respond(phone) {
+      flex-direction: column;
+      .order {
+         order: 2;
+      }
+   }
       &--1 {
          img {
             width: 30vw;
             height: auto;
+            
          }
+      @include respond(phone){
+         img{
+             width: 100%;
+      }
       }
 
       &--2 {
@@ -55,6 +68,12 @@
          align-self: center;
          background: linear-gradient(225deg, rgba(2,0,36,1) 0%, rgba(84,200,214,1) 0%, rgba(73,88,219,1) 100%)
                      transparent;
+
+      @include respond(phone){
+         width: 100%;
+         margin-top: 0;
+      }
+
          p,span {
             font-size: 1.6rem;
             padding: 3rem;
