--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,7 @@ body {
   transform: translateX(-2rem); }
   @media (max-width: 600px) {
     .trans-l {
-      transform: none;
-      flex-direction: column-reverse; } }
+      transform: none; } }
 
 .trans-r {
   transform: translateX(2rem); }
@@ -234,14 +233,16 @@ h3 a {
     min-height: 0; }
     @media (max-width: 600px) {
       .post-content__vis {
-        flex-direction: column; } }
+        flex-direction: column; }
+        .post-content__vis .order {
+          order: 2; } }
     .post-content__vis--1 img {
       width: 30vw;
       height: auto; }
-      @media (max-width: 600px) {
-        .post-content__vis--1 img {
-          width: 100%; } }
-    .post-content__vis--2 {
+    @media (max-width: 600px) {
+      .post-content__vis--1 img {
+        width: 100%; } }
+    .post-content__vis--1--2 {
       box-shadow: -10px 15px 20px 0 rgba(0, 0, 0, 0.3);
       width: 80%;
       margin-top: 2rem;
@@ -249,10 +250,10 @@ h3 a {
       align-self: center;
       background: linear-gradient(225deg, #020024 0%, #54c8d6 0%, #4958db 100%) transparent; }
       @media (max-width: 600px) {
-        .post-content__vis--2 {
+        .post-content__vis--1--2 {
           width: 100%;
           margin-top: 0; } }
-      .post-content__vis--2 p, .post-content__vis--2 span {
+      .post-content__vis--1--2 p, .post-content__vis--1--2 span {
         font-size: 1.6rem;
         padding: 3rem;
         color: rgba(255, 255, 255, 0.8); }
@@ -616,6 +617,10 @@ select {
   height: 92vh;
   display: flex;
   justify-content: space-evenly; }
+  @media (max-width: 600px) {
+    .hero {
+      background-size: 100% 100%;
+      background-repeat: no-repeat; } }
 
 .wrapper {
   position: relative;
