--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,6 +8,12 @@
   justify-content: space-evenly;
 
 
+  @include respond(phone) {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+  }
+
   
 }
 
