--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -19,22 +19,28 @@
  tab-land
  big desktop;
  */
+
+
+//1em = 16px, converting media query thresholds to em's from px. 
 @mixin respond($breakpoint) {
   @if $breakpoint == phone-small{
-    @media (max-width: 320px) {@content};
+    @media (max-width: 20em) {@content}; //320px
   }
   @if $breakpoint == phone-med{
-    @media (max-width: 425px) {@content};
+    @media (max-width: 26.56em) {@content}; //425px
   }
   @if $breakpoint == phone {
-    @media (max-width: 600px) {@content};
+    @media (max-width: 37.5em) {@content}; //600px
   }
   @if $breakpoint == tab-port {
-    @media (max-width: 768px) {@content};
+    @media (max-width: 48em ) {@content}; //768px;
   }
 
   @if $breakpoint == tab-land {
-    @media (max-width: 1024px) {@content};
+    @media (max-width: 64em) {@content}; //1024px;
   }
   
+  @if $breakpoint == big-desktop { 
+    @media (min-width: 112.5em) {@content}; //1800px;
+  }
 }
