--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,28 +8,24 @@
 
 html {
   //This defines what 1rem is
-  font-size: 52.5%;  //so in this case 0.625 x 16 (default browser font) = 10px
+  font-size: 62.5%;  //so in this case 0.625 x 16 (default browser font) = 10px
+
   //ORDER OF MEDIA QUERIES MATTERS! LAST ONE IS THE ONE APPLIED IF THERE IS A CONFLICT.
-
+  //
   @include respond(tab-land) {
-    font-size: 50%;
+    font-size: 56.25%; // 1rem = 9px;
   }
-
   @include respond(tab-port) {
-    font-size: 45%;
+    font-size: 50%; //i want 1rem = 8px, so 8/16 = 50% etc;
   }
- // @include respond(tab-land) { //width < 1200px
- //   font-size: 56.25%;  // 1rem = 9px, so 9/16 = 56.25%
- // }
+  @include respond(phone) {
+    font-size: 50%; //i want 1rem = 8px, so 8/16 = 50% etc;
+  }
 
- // @include respond(tab-port) { // width < 900px
- //   font-size: 50% //I want 1 rem = 8px, so 8/16 = 50%
- // }
+  @include respond(big-desktop) {
+    font-size: 75%; // 1rem = 12px;
+  }
 
-
- // @include respond(big-desktop) {
- //   font-size: 75%; //1rem = 12px, so 12/16 = 75%
- // }
 }
 
 body {
@@ -58,19 +54,24 @@ body {
 
   display: flex;
   flex-direction: column;
-  margin: 3rem 30vw 0 30vw ;
+  margin: 3rem 25vw 0 25vw ;
 
-  @media(max-width:1024px){
+  @include respond(tab-land) {
+
     margin: 3rem 20vw 0 20vw;
+
   }
 
-  @media(max-width:768px){
+  @include respond(tab-port) {
+
     margin: 3rem 15vw 0 15vw;
-  }
 
-  @media(max-width:425px){
+  }
+  @include respond(phone) {
+
     margin: 3rem 6vw 0 6vw;
   }
+
 
 
   
