--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,19 +1,34 @@
 .feature-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 5rem;
+//  display: grid;
+//  grid-template-columns: 1fr 1fr 1fr 1fr;
+//  grid-template-rows: auto;
+//  grid-gap: 5rem;
+
+    display: flex;
+    gap: 5rem;
+    justify-content: space-evenly;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    @include respond(phone) {
+        gap: 2rem;
+        
+    }
 
   .feature-box{
-    margin-top: 5rem;
     background-color: rgba($color-white, .8);
     font-size: 1.8rem;
     padding: 2.5rem;
     text-align: center;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-    margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+    @include respond(phone) {
+        
+    }
 
     &__text {
   
@@ -22,6 +37,7 @@
      font-weight: 700;
      text-transform: uppercase;
      margin-bottom: 1rem;
+
     }
 
     &:hover {
@@ -32,6 +48,14 @@
       font-size: 7rem;
       color: lightblue;
       margin-bottom: 1.5rem;
+
+      @include respond(phone-med) {
+        font-size: 5rem;
+      }
+
+      @include respond(phone-small) {
+        font-size: 3rem;
+      }
     }
   } 
 }
