--- a/sass/components/_posts.scss
+++ b/sass/components/_posts.scss
@@ -50,7 +50,7 @@
    }
       &--1 {
          img {
-            width: 30vw;
+            width: 25vw;
             height: auto;
             
          }
@@ -59,6 +59,7 @@
              width: 100%;
       }
       }
+   }
 
       &--2 {
          box-shadow: -10px 15px 20px 0 rgba(0, 0, 0,.3);
@@ -83,6 +84,6 @@
 
 
    }
+  
 }
-
 
