--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,9 +8,8 @@
   justify-content: space-evenly;
 
 
-  @include respond(phone) {
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+  @include respond(phone-small) {
+    height: 70vh;
 
   }
 
