--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ body {
   height: 100%;
   transition: transform .25s ease;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 37.5em) {
+    .race-map .image-rotate {
+      transform: rotate(-90deg); } }
 
 .img-click {
   transform: scale(1.5); }
@@ -400,6 +403,13 @@ h3 a {
   font-size: 2rem;
   border: none;
   text-decoration: none; }
+  @media (max-width: 26.56em) {
+    .dropbtn {
+      font-size: 1.6rem; } }
+  @media (max-width: 21.25em) {
+    .dropbtn {
+      /*340px*/
+      font-size: 1.3rem; } }
   .dropbtn:hover, .dropbtn :active {
     background-color: rgba(255, 255, 255, 0.2); }
   .dropbtn__content {
@@ -540,21 +550,23 @@ tfoot {
   background-color: #333;
   color: #fff; }
 
-.results-table table {
-  border-collapse: separate;
-  border-spacing: 0;
-  border-right: 1px solid #333 !important;
-  font-size: 1.6rem; }
-
-.results-table td, .results-table th {
-  border: 1px solid #333 !important;
-  border-left: 1px solid #333 !important;
-  border-right: 1px solid #fff !important;
-  padding: .8rem; }
-
-.results-table #first {
-  background-color: orange;
-  color: #fff; }
+.results-table {
+  display: flex;
+  justify-content: center;
+  overflow-x: auto; }
+  .results-table table {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-right: 1px solid #333 !important;
+    font-size: 1.6rem; }
+  .results-table td, .results-table th {
+    border: 1px solid #333 !important;
+    border-left: 1px solid #333 !important;
+    border-right: 1px solid #fff !important;
+    padding: .8rem; }
+  .results-table #first {
+    background-color: orange;
+    color: #fff; }
 
 form {
   font-family: "Lato" sans-serif;
@@ -568,6 +580,18 @@ form {
   padding-bottom: 2rem;
   border: 1px solid #CCC;
   border-radius: 1rem; }
+  @media (max-width: 48em) {
+    form {
+      width: 40vw; } }
+  @media (max-width: 37.5em) {
+    form {
+      width: 50vw; } }
+  @media (max-width: 26.56em) {
+    form {
+      width: 60vw; } }
+  @media (max-width: 20em) {
+    form {
+      width: 70vw; } }
   form ul {
     list-style: none;
     padding: 0;
@@ -585,6 +609,15 @@ label {
   text-align: right;
   font-size: 1.6rem;
   padding-right: 1rem; }
+  @media (max-width: 37.5em) {
+    label {
+      width: 15vw; } }
+  @media (max-width: 26.56em) {
+    label {
+      width: 20vw; } }
+  @media (max-width: 20em) {
+    label {
+      width: 25vw; } }
 
 input,
 select {
@@ -604,9 +637,30 @@ select {
     outline: none !important;
     border: 1px solid rgba(255, 0, 0, 0.5);
     box-shadow: 0 0 10px rgba(255, 0, 0, 0.3); }
+  @media (max-width: 48em) {
+    input,
+    select {
+      width: 15vw; } }
+  @media (max-width: 37.5em) {
+    input,
+    select {
+      width: 20vw; } }
+  @media (max-width: 26.56em) {
+    input,
+    select {
+      width: 25vw; } }
+  @media (max-width: 20em) {
+    input,
+    select {
+      width: 30vw; } }
 
 select {
   background-color: white; }
+
+.note {
+  font-size: 1.2rem;
+  color: rgba(255, 0, 0, 0.8);
+  padding-left: 1rem; }
 
 .header {
   display: flex;
