--- a/css/style.css
+++ b/css/style.css
@@ -68,16 +68,18 @@ body {
   grid-template-rows: auto; }
 
 .race-map {
-  width: 100%;
-  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   transition: transform .25s ease;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
-  @media (max-width: 37.5em) {
-    .race-map .image-rotate {
-      transform: rotate(-90deg); } }
 
 .img-click {
   transform: scale(1.5); }
+  @media (max-width: 37.5em) {
+    .img-click {
+      max-width: 100vh;
+      max-height: 100vw;
+      transform: scale(1.8, 2.5) rotate(90deg); } }
 
 .alt-pic {
   width: 100%; }
@@ -115,7 +117,8 @@ body {
 .img-cont {
   max-width: 100%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-  margin-bottom: 10rem; }
+  margin-bottom: 10rem;
+  margin-top: 2rem; }
 
 .marg-bot p {
   margin-bottom: 3rem; }
@@ -206,6 +209,15 @@ ul {
 .marker-down li::marker {
   color: rgba(255, 0, 0, 0.8);
   content: "◒"; }
+
+.marker-red li::marker {
+  color: rgba(255, 0, 0, 0.5); }
+
+.marker-red li > p {
+  margin-bottom: 2rem; }
+
+.text-red {
+  color: rgba(255, 0, 0, 0.5); }
 
 .text-para {
   line-height: 1.6;
@@ -552,7 +564,6 @@ tfoot {
 
 .results-table {
   display: flex;
-  justify-content: center;
   overflow-x: auto; }
   .results-table table {
     border-collapse: separate;
