--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,19 +1,19 @@
 .race-map{
-  width: 100%;
-  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   transition: transform .25s ease;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+  
+ }
 
-  @include respond(phone) {
-    .image-rotate{
-      transform: rotate(-90deg);
-    }
-  }
-
-}
 
 .img-click {
   transform: scale(1.5);
+  @include respond(phone) {
+    max-width: 100vh;
+    max-height: 100vw;
+    transform: scale(1.8, 2.5)  rotate(90deg);
+  }
 }
 
 .alt-pic {
@@ -67,6 +67,7 @@
   max-width: 100%;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
   margin-bottom: 10rem;
+  margin-top: 2rem;
     
 
 }
